--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,9 @@
         <activity 
             android:label="@string/app_name"
             android:name="de.lukeslog.snapnow.main.BlackoutDefinition"/>
+		<activity 
+            android:label="@string/app_name"
+            android:name="de.lukeslog.snapnow.main.ReUploadActivity"/>
         <service android:name="de.lukeslog.snapnow.posting.PostToTumblrViaMail"></service>
         <service android:name="de.lukeslog.snapnow.main.NotificationService"></service>
         <service android:name="de.lukeslog.snapnow.actors.NotificationActor"></service>
